# robot_ws

./: .gitignore
src/bumperbot_bringup/: CMakeLists.txt  package.xml
src/bumperbot_controller/: CMakeLists.txt  package.xml
src/bumperbot_controller/bumperbot_controller/: noisy_controller.py  simple_controller.py
src/bumperbot_controller/config/: bumperbot_controllers.yaml  twist_mux_joy.yaml  twist_mux_locks.yaml  twist_mux_topic.yaml
src/bumperbot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
src/bumperbot_controller/src/: noisy_controller.cpp  simple_controller.cpp
src/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
src/bumperbot_description/: CMakeLists.txt  package.xml
src/bumperbot_description/dimens/: final (1).yaml  values.yaml
src/bumperbot_description/launch/: display.launch.py  gazebo.launch.py
src/bumperbot_description/meshes/: caster_front_link.stl  caster_rear_link.stl  new_laser_link.stl  wheel_left_link.stl  wheel_right_link.stl
src/bumperbot_description/rviz/: display.rviz
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro  robot.urdf.xacro  robot_gazebo.xacro  robot_ros2_control.xacro  test.urdf.xacro
src/bumperbot_firmware/: CMakeLists.txt  package.xml
src/bumperbot_firmware/bumperbot_firmware/: mpu6050_driver.py
src/bumperbot_localization/: CMakeLists.txt  package.xml
src/bumperbot_localization/bumperbot_localization/: odometry_motion_model.py
src/bumperbot_localization/launch/: global_localization.launch.py
src/bumperbot_localization/rviz/: odometry_motion_model.rviz
src/bumperbot_mapping/: CMakeLists.txt  package.xml
src/bumperbot_mapping/config/: slam_toolbox.yaml
src/bumperbot_msgs/: package.xml
src/bumperbot_py_examples/: package.xml  setup.py
src/bumperbot_py_examples/bumperbot_py_examples/: simple_tf_kinematics.py
src/bumperbot_utils/: CMakeLists.txt  package.xml
src/bumperbot_utils/bumperbot_utils/: safety_stop.py
src/bumperbot_utils/src/: safety_stop.cpp
src/opencv_comparison/: CMakeLists.txt  package.xml
src/opencv_comparison/opencv_comparison/: camera.py  colour_to_grey_conversion.py  image_publisher.py  image_subscriber.py  opencv_funcs.py
src/opencv_test/: CMakeLists.txt  package.xml
src/opencv_test/opencv_test/: image_publisher.py  image_subscriber.py
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/launch/: controller.launch.py
src/robot_cpp_examples/: CMakeLists.txt  package.xml
src/robot_cpp_examples/src/: simple_turtlesim_kinematics.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/dimens/: final.yaml  values (1).yaml
src/robot_description/launch/: display.launch.py  gazebo.launch.py
src/robot_description/meshes/: wheel_left_link.stl
src/robot_description/urdf/: robot.urdf.xacro  robot_gazebo.xacro  robot_ros2_control.xacro
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_py_examples/: package.xml  setup.py
src/yolo/: CMakeLists.txt  package.xml
src/yolo/yolo/: main_inference.py  yolo_detector.py
src/yolo_detection/: package.xml  setup.py
(+6 files in other folders)
